# DemoSDK

app/: CMakeLists.txt  app-release.apk  build.gradle
app/src/main/cpp/: CMakeLists.txt
